# tinkerqa-discord

./: .LICENSE.swp  Dockerfile  README.md  bot.py  config.yml  docker-compose.yml  envsetup.yml  pyproject.toml
.github/workflows/: docker-image.yml
tinkerqa_discord/: TinkerQaDiscord.py  __init__.py  config.py  exceptions.py  helpers.py
tinkerqa_discord/commands/: errors.py  threadtools.py
