[tool.poetry]
name = "tinkerqa-discord"
version = "0.1.0"
description = ""
authors = ["Robert <xiurobert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
py-cord = {version = "^1.7.3", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
